import React from "react";
import { shallow } from "enzyme";
import "@testing-library/jest-dom";

import GifGrid from "../../components/GifGrid";
import useFetchGifs from "../../hooks/useFetchGifs";
jest.mock("../../hooks/useFetchGifs"); // Con este mock, se finje la llamada a ese archivo y suponer/controlar la información que va a responder

describe("Pruebas sobre el componente GifGrid", () => {
  const category = "Goku";

  test("1. Generación del MatchSnapshot", () => {
    useFetchGifs.mockReturnValue({
      data: [],
      loading: true,
    });
    const wrapper = shallow(<GifGrid category={category} />);
    expect(wrapper).toMatchSnapshot();
  });

  test("2. Debe mostrar iutems cuando se cargan imagenes con el useFetchgifs", () => {
    const gifs = [
      {
        id: "ABC",
        url: "https://localhost/cualquier/cosa.jpg",
        title: "Cualquier cosa",
      },
    ];
    useFetchGifs.mockReturnValue({
      data: gifs,
      loading: false,
    });
    const wrapper = shallow(<GifGrid category={category} />);

    expect(wrapper).toMatchSnapshot();
  });
});
